chore: let spring be overlap to prevent it from removing other labels

--- a/dev_assets/styles/osm/shared/labels.less
+++ b/dev_assets/styles/osm/shared/labels.less
@@ -495,6 +495,7 @@
 		text-halo-radius: @poi-spring_halo_radius;
 		text-fill: @poi-water-fill;
 		text-size: @poi-spring-size;
+		text-allow-overlap: true;
 		text-allow-overlap-same-feature-id: true;
 	}
 	[zoom>=17]::label {
